# smoke_status_prediction

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb
notebooks/mydir/dib30/: oracle.json
notebooks/mydir/dib30/trial_0000/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0001/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0002/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0003/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0004/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0005/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0006/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0007/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0008/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0009/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0010/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0011/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0012/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0013/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0014/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0015/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0016/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib30/trial_0017/: checkpoint.weights.h5  trial.json
notebooks/mydir/dib35/: oracle.json
reports/figures/: hearing
smoker_stat_pred/: __init__.py  dataset.py  features.py  plots.py
smoker_stat_pred/modeling/: predict.py  train.py
smoker_venv/: pyvenv.cfg
(+278 files in other folders)
