[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "smoker_stat_pred"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "jupyter",
    "plotly",
    "pandas",
    "scikit-learn"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["smoker_stat_pred"]
include = ["pyproject.toml", "smoker_stat_pred/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["smoker_stat_pred"]
force-sort-within-sections = true

